cmake_minimum_required(VERSION 3.29)
project(recursion_cpp_examples)

set(CMAKE_CXX_STANDARD 11)

add_executable(recursion_cpp_examples
#        01_factorial.cpp
#        02_fibo_a.cpp
#        02_fibo_b.cpp
#        03_ackermann.cpp
#        04_de_quy_tuong_ho_collatz.cpp
#        05_power.cpp
#        06_hoan_vi.cpp
#        07_towers_of_hanoi.cpp
#        08_eight_queens.cpp
#        09_quick_sort.cpp
        10_merge_sort.cpp
)
